Lifted resource EventWaitHandle to Cereal and eliminate use of Resource object and all other auxiliary locks.

--- a/Pug.Cereal.Common/Pug.Cereal.Common.csproj
+++ b/Pug.Cereal.Common/Pug.Cereal.Common.csproj
@@ -35,8 +35,8 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Grain.cs" />
     <Compile Include="ICereal.cs" />
+    <Compile Include="IGrain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
