Conditional deadlock detection, additional test, IDisposable implementation and other trivial changes.

--- a/Pug.Cereal.Common/Pug.Cereal.Common.csproj
+++ b/Pug.Cereal.Common/Pug.Cereal.Common.csproj
@@ -35,7 +35,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Deadlocked.cs" />
+    <Compile Include="PossibleDeadlock.cs" />
     <Compile Include="ICereal.cs" />
     <Compile Include="IGrain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
